2006-07-21  Brian Matherly  <brian@gramps-project.org>
	* src/ReportBase/_ReportUtils.py: fix modified birth string (bug # 266).

2006-07-21  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/GraphViz.py: launch image viewer in Windows.
	* src/Mime/_WinMime.py: handle rundll32.exe applications.
	* src/Utils.py: search path in Windows when looking for applications.

2006-07-21  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_RelationView.py: provide number for children/siblings
	* src/GrampsWidgets.py: fix spacing on link box

2006-07-20  Don Allingham  <don@gramps-project.org>
	* src/GrampsWidgets.py: fix spacing on link label

2006-07-20  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/GraphViz.py (GraphViz.__init__): Better error handling.
	* src/plugins/IndivComplete.py: Use NameDisplay.
	* src/plugins/FamilyGroup.py: Use NameDisplay.
	* src/GrampsCfg.py (add_name_panel): Minor UI improvements;
	(_build_custom_name_ui): Minor UI improvements;
	(cb_edit_fmt_str): Make correct transient_for call.
	* src/gramps.glade (namefmt_edit): Add expander with the help on
	format definitions; minor UI improvements.

2006-07-19  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/Checkpoint.py (Checkpoint.init_gui): Detect whether
	rcs program is present and modify UI accordingly.
	* src/plugins/checkpoint.glade: Add hidden warning label.
	* src/plugins/StatisticsChart.py
	(StatisticsChartOptions.get_report_filters): Add custom filters.
	* src/plugins/Calendar.py (FilterWidget.get_filters): Add custom
	filters.
	* src/plugins/TimeLine.py (TimeLineOptions.get_report_filters):
	Add custom filters.
	* src/plugins/IndivComplete.py
	(IndivCompleteOptions.get_report_filters): Add custom filters.
	* src/plugins/NarrativeWeb.py
	(WebReportOptions.get_report_filters): Add custom filters. 
	* src/plugins/GraphViz.py (GraphViz.__init__): Take care of the
	encoding errors;
	(GraphVizOptions.get_report_filters): Add custom filters.
