@@ -228,6 +228,7 @@ src/data/templates/Makefile
 data/Makefile
 data/man/Makefile
 data/man/fr/Makefile
+debian/Makefile
 example/Makefile
 example/gramps/Makefile
 ])
