@@ -1,0 +1,8 @@
+# This is the debain dir level Makefile for Gramps
+# $Id$
+
+EXTRA_DIST = \
+	changelog compat control copyright \
+	gramps.dirs gramps.docs gramps-help.docs gramps.manpages \
+	gramps.menu gramps.postinst gramps.postrm gramps.prerm \
+	gramps.xpm README.Debian rules substvars
